# jupyter-everywhere-extension

./: .gitignore  .gitmodules  notes.txt  package-lock.json  pyproject.toml  tsconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: add-to-project.yml  cd.yml  enforce-label.yml  pr-deploy.yml  update-integration-tests.yml
docs/: CNAME  base.css  index.html  jupyter-lite.json  landing.css  landing.js
docs/extensions/@jupyterlite/xeus-extension/: package.json
docs/extensions/@jupyterlite/xeus-extension/static/: 961.67dd8e1f78d2b625b1d0.js  remoteEntry.ba7bfd40297edb64265c.js  third-party-licenses.json
docs/extensions/@wiki3-ai/ai-sdk-chat-kernel/: package.json
docs/extensions/jupytereverywhere/: build_log.json  package.json
docs/extensions/jupytereverywhere/schemas/jupytereverywhere/: package.json.orig  plugin.json
docs/extensions/jupytereverywhere/static/: lib_index_js.2fce6b25391b035cf918.js  remoteEntry.1ea3d6178a954798a703.js  remoteEntry.b0cf6e9f30bbdb51a0c2.js  remoteEntry.cbb51c931eccd7886443.js  style.js  style_index_js.62a9a3cdecab0a4521fb.js  vendors-node_modules_canvg_lib_index_es_js.5559f2aae42642c6bff3.js  vendors-node_modules_dompurify_dist_purify_es_mjs.9f065d7d3da8739c4fa2.js  vendors-node_modules_html2canvas_dist_html2canvas_js.0480b8f61e8ed1a7befe.js  vendors-node_modules_jspdf_dist_jspdf_es_min_js.8ec78c296f979ee90c6b.js  vendors-node_modules_jupyterlite_application_lib_index_js.9ec98415a0b91cbca116.js
docs/lab/: index.html
docs/lab/404/: index.html
docs/lab/files/: index.html
docs/xeus/: kernels.json
docs/xeus/xeus-kernel/: empack_env_meta.json
docs/xeus/xeus-kernel/xr/: kernel.json
lite/: requirements.txt
src/: kernels.ts  landing.tsx  upload.ts
ui-tests/: package.json
